exo: Ignore synthetic key repeat events.

Exo clients should not see these events and instead handle
key repeat on the client side.

Bug: 847500
Test: exo_unittests
Change-Id: I4d4c755dbe0a2fffe24f3ce85fd70a3608cfed7c
Reviewed-on: https://chromium-review.googlesource.com/1079768
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563095}
Former-commit-id: 1addcee1a18a2793020618e3fc2ca532135820a5